Mudança no algoritmo de criptografia e inclusão do token e key nas configurações do sistema